modules/voyscript/tests/scripts/analyzer/errors/invalid_concatenation_dictionary.voy
func test():
	print({"hello": "world"} + {"kosmic": "engine"})
